# YareLampGo

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  ASSET_LICENSES.md  AUTHORS.md  COPYRIGHT  LICENSE  NOTICE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  calibrate.py  install-codex-skill.ps1  install-codex-skill.sh  install.ps1  install.sh  lampgo.toml.example  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_motion.yml
.github/workflows/: ci.yml
android/lampgo-camera-companion/: .gitignore  README.md
android/lampgo-camera-companion/scripts/: build.sh  install.sh
assets/: lampgoGLB.glb
assets/calibration/: AL01.20260310.new.json  AL01.20260312.new.json  AL01.json  AL02.json  AL03.json
assets/printable/: README.en.md  README.md
assets/printable/YareLampGo_V1.0/: 卡口1.STEP  卡口2.STEP  底座.STEP  底座盖板.STEP  灯头.STEP  灯罩.STEP  盖板.STEP  连杆1.STEP  连杆2.STEP
assets/recordings/: Stretch.csv  Stretch.txt  angry_jerk.csv  awkward_pause.csv  bowing_head.csv  bowing_head.txt  celebrate.csv  confused.csv  dance.csv  dance1.csv  dance1.txt  dance2.csv  dance2.txt  deep_think.csv  deep_thinking.csv  deep_thinking.txt  dislike.csv  dizzy_spin.csv  doze_off.csv  dramatic_faint.csv  excited.csv  excited.txt  flirty_wink.csv  groove_bounce.csv  headshake1.csv  headshake1.txt  heartbreak.csv  lie_flat.csv  lie_flat.txt  look_ahead.csv  look_ahead.txt  look_around.csv  look_around.txt  lookout.csv  mischief_peek.csv  movebackward.csv  moveforward.csv  nod.csv  nod.txt  nod_small.csv  (+58 more)
docs/: Gemini_commend.md  README.en.md  README.md  README_zh.md  architecture.md  composed_skills.md  dance_to_music_v1_plan.md  frontend_usage.md  hardware-and-assets-scope.md  internal_project_intro.md  m1_plan.md  m2_plan_openclaw.md  pet-3d-pipeline.md  project_description.md  roadmap.en.md  roadmap.md
docs/development/: contributing.md
docs/examples/: user_skill_side_wiggle.json  user_skill_welcome_home.json
docs/getting-started/: configuration.md  manual-hardware-setup.en.md  manual-hardware-setup.md  quick-start.md
docs/guides/: codex-integration.md  expression-authoring.md  motion-and-expression.md  openclaw-integration.md  phone-control.md
docs/hardware/: README.en.md  README.md  wiring.md
docs/hardware/v2/: README.en.md  README.md  SOURCE_MANIFEST.md  YareLampGo_V2.0_assembly_manual.docx  YareLampGo_V2.0_assembly_manual.md
docs/schemas/: expression-preset.schema.json  eye-clip.schema.json  led-effect.schema.json
examples/: basic_motion.py  custom_skill.py  openclaw_integration.py
lampgo/: __init__.py  autodetect.py  cli.py  clock.py  electronic_ocean.py  eventstore.py  expression_clips.py  expression_library.py  installer.py  ipc.py  led_effects.py  macos_audio.py  mcp_stdio.py  personastore.py  recordings.py  server.py  sessionstore.py
lampgo/agent/: __init__.py  codex.py  indicator.py  manager.py  models.py  progress.py
lampgo/bridge/: desktop.py  openclaw.py  openclaw_client.py  openclaw_installer.py  state_writer.py
lampgo/context/: __init__.py  codex_memory.py
lampgo/core/: breathing.py  config.py  events.py  hal.py  led.py  motion.py  safety.py  spring.py  style.py  trajectory.py  types.py  virtual_motion.py
lampgo/device/: __init__.py  audio_stream.py  esp32.py  phone_agent.py  phone_direct.py  phone_observer.py  phone_paths.py
lampgo/macos/audio_capture/: Package.swift
lampgo/perception/: anthropic_adapter.py  audio.py  camera.py  cat_teaser.py  llm_client.py  music.py  presence.py  router.py
lampgo/persona/: __init__.py  bundle.py
lampgo/skills/: base.py  composed.py  executor.py  fsm.py  loader.py  recorder.py  registry.py
lampgo/skills/builtin/: cat_teaser.py  expression_skills.py  motion_skills.py  music_skills.py  parametric_skills.py  phone_skills.py  playback_skills.py  (+2 more)
lampgo/voice/: agent_sdk.py  audio.py  echo_filter.py  livekit_bridge.py  loop.py  stream_chat.py  stt.py  tts.py  vad.py  wake_loop.py  wakeword.py
lampgo/web/: __init__.py  gateway.py  llm_compat.py  ws_bridge.py
openclaw-plugin-lampgo/: index.ts  openclaw.plugin.json  package.json
openclaw-skills/lampgo/: SKILL.md  _meta.json
openclaw-skills/lampgo-codegen/: SKILL.md  _meta.json
openclaw-skills/lampgo-search-touch/: SKILL.md  _meta.json
openclaw-skills/lampgo-vision/: SKILL.md  _meta.json
scripts/: mic_test.py
skills/lampgo-setup/: SKILL.md
tests/: conftest.py  mic_test.py  test_agent_sdk_lifecycle.py  test_agent_sdk_patch.py  test_anthropic_adapter.py  test_autodetect.py  test_camera_capture.py  test_cat_teaser.py  test_cli.py  test_clock.py  test_codex_agent.py  test_codex_memory.py  test_composed_skill.py  test_config.py  test_config_asset_paths.py  test_desktop.py  test_electronic_ocean.py  test_esp32_pairing.py  test_expression_clips.py  test_expression_library.py  test_fsm.py  test_hal.py  test_install_lampgo.py  test_installer.py  test_installer_audio_tap.py  test_ipc.py  test_joint_directions.py  test_led_effects.py  test_livekit_browser_lifecycle.py  test_llm_client_message_formats.py  test_macos_audio.py  test_mcp_stdio.py  test_motion.py  test_motion_runtime.py  test_motion_skills.py  test_music_features.py  test_openclaw_plugin_freshness.py  test_openclaw_tool_sync.py  test_parametric_skills.py  test_phone_skills.py  (+22 more)
tools/: diagnose_feetech_motor.py  install_lampgo.py
(+21 files in other folders)
