[project]
name = "lampgo"
version = "0.1.0"
description = "Desktop embodied intelligent lamp robot runtime — clean, safe, OpenClaw-ready."
readme = "README.md"
authors = [
    { name = "guoningshen", email = "guoningshen@xiaomi.com" },
]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "lerobot[feetech]>=0.5.0",
    "sounddevice>=0.5.5",
    "edge-tts>=7.2.8",
    "httpx>=0.28.1",
    "starlette>=0.45",
    "uvicorn>=0.34",
    "websockets>=14.0",
    "zeroconf>=0.131",
]

[project.optional-dependencies]
perception = [
    "opencv-python>=4.8",
]
voice = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.17",
    "livekit>=0.17",
    "livekit-api>=0.7",
    "xiaomi-livekit-agent-sdk>=0.1.0",
]
bridge = [
    "pyautogui>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
lampgo = "lampgo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[[tool.uv.index]]
name = "xiaomi"
url = "https://pkgs.d.xiaomi.net/artifactory/api/pypi/pypi-virtual/simple"

[tool.uv.sources]
xiaomi-livekit-agent-sdk = { index = "xiaomi" }

[tool.uv]
override-dependencies = [
    # openwakeword pulls tflite-runtime which has no wheels for Python 3.12+.
    # We use onnxruntime as the inference backend, so exclude tflite-runtime
    # by pinning it to an impossible environment marker.
    "tflite-runtime ; python_version < '0'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "motion: motion-related tests (HAL, runtime, safety, trajectory, skills, playback)",
]
