[project]
name = "lampgo"
version = "0.1.0"
description = "Desktop embodied intelligent lamp robot runtime — clean, safe, OpenClaw-ready."
readme = "README.md"
authors = [
    { name = "lampgo contributors", email = "noreply@lampgo.local" },
]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "numpy>=2.0",
    "lerobot[feetech]>=0.5.0",
    "sounddevice>=0.5.5",
    "edge-tts>=7.2.8",
    "httpx>=0.28.1",
    "starlette>=0.45",
    "uvicorn>=0.34",
    "websockets>=14.0",
    "zeroconf>=0.131",
]

[project.optional-dependencies]
perception = [
    "opencv-python>=4.8",
]
voice = [
    "livekit>=0.17",
    "livekit-api>=0.7",
    "livekit-agents[codecs]==1.5.5+lampgo.1",
    "lampgo-livekit-agent-sdk>=0.3.0",
]
bridge = [
    "pyautogui>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
lampgo = "lampgo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[[tool.uv.index]]
name = "lampgo"
url = "https://packages.lampgo.invalid/pypi/simple"
explicit = true

[tool.uv.sources]
lampgo-livekit-agent-sdk = { index = "lampgo" }
livekit-agents = { index = "lampgo" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lampgo"]
artifacts = [
    "lampgo/bin/LampgoAudioTap",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "motion: motion-related tests (HAL, runtime, safety, trajectory, skills, playback)",
]
