[project]
name = "lampgo"
version = "0.1.0"
description = "Desktop embodied intelligent lamp robot runtime with a local Codex agent harness."
readme = "README.md"
authors = [
    { name = "lampgo contributors", email = "noreply@lampgo.local" },
]
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE", "NOTICE", "AUTHORS.md", "COPYRIGHT", "ASSET_LICENSES.md"]

dependencies = [
    "pydantic>=2.0",
    "structlog>=26.1.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "numpy>=2.0",
    "lerobot[feetech]>=0.5.0",
    "sounddevice>=0.5.5",
    "edge-tts>=7.2.8",
    "httpx>=0.28.1",
    "starlette>=0.45",
    "uvicorn>=0.34",
    "websockets>=14.0",
    "zeroconf>=0.131",
]

[project.optional-dependencies]
perception = [
    "opencv-python>=4.8",
]
voice = [
    "livekit>=0.17",
    "livekit-api>=0.7",
    "lampgo-livekit-agent-sdk>=0.3.0",
    "psutil>=7.0",
]
bridge = [
    "pyautogui>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.4",
]

[project.scripts]
lampgo = "lampgo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lampgo"]
artifacts = [
    "lampgo/bin/LampgoAudioTap",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "motion: motion-related tests (HAL, runtime, safety, trajectory, skills, playback)",
]
